--- a/test6/ui/files/修改密码/styles.css
+++ b/test6/ui/files/修改密码/styles.css
@@ -3,7 +3,7 @@
   background-image:none;
   position:static;
   left:auto;
-  width:834px;
+  width:1146px;
   margin-left:0;
   margin-right:0;
   text-align:left;
@@ -12,7 +12,7 @@
   position:absolute;
   z-index:0;
 }
-#u507_div {
+#u528_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -30,7 +30,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u507 {
+#u528 {
   border-width:0px;
   position:absolute;
   left:35px;
@@ -38,7 +38,7 @@
   width:799px;
   height:434px;
 }
-#u508 {
+#u529 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -47,7 +47,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u509_img {
+#u530_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -55,7 +55,7 @@
   width:799px;
   height:58px;
 }
-#u509 {
+#u530 {
   border-width:0px;
   position:absolute;
   left:35px;
@@ -68,7 +68,7 @@
   font-size:28px;
   color:#FFFFFF;
 }
-#u510 {
+#u531 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -76,7 +76,7 @@
   width:795px;
   word-wrap:break-word;
 }
-#u511 {
+#u532 {
   border-width:0px;
   position:absolute;
   left:122px;
@@ -84,7 +84,7 @@
   width:708px;
   height:372px;
 }
-#u511_input {
+#u532_input {
   border-width:2px;
   position:absolute;
   left:0px;
@@ -93,7 +93,7 @@
   height:372px;
   overflow:auto;
 }
-#u512 {
+#u533 {
   border-width:0px;
   position:absolute;
   left:35px;
@@ -101,7 +101,7 @@
   width:87px;
   height:192px;
 }
-#u512_menu {
+#u533_menu {
   border-width:0px;
   position:absolute;
   left:-3px;
@@ -113,7 +113,7 @@
   -ms-transform:rotate(NaNdeg);
   transform:rotate(NaNdeg);
 }
-#u513 {
+#u534 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -121,7 +121,7 @@
   width:92px;
   height:197px;
 }
-#u514_img {
+#u535_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -129,7 +129,7 @@
   width:87px;
   height:28px;
 }
-#u514 {
+#u535 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -141,7 +141,7 @@
   font-style:normal;
   color:#000000;
 }
-#u515 {
+#u536 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -149,7 +149,7 @@
   width:83px;
   word-wrap:break-word;
 }
-#u516_img {
+#u537_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -157,7 +157,7 @@
   width:87px;
   height:34px;
 }
-#u516 {
+#u537 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -165,7 +165,7 @@
   width:87px;
   height:34px;
 }
-#u517 {
+#u538 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -173,7 +173,7 @@
   width:83px;
   word-wrap:break-word;
 }
-#u518_img {
+#u539_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -181,7 +181,7 @@
   width:87px;
   height:36px;
 }
-#u518 {
+#u539 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -189,7 +189,7 @@
   width:87px;
   height:36px;
 }
-#u519 {
+#u540 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -197,7 +197,7 @@
   width:83px;
   word-wrap:break-word;
 }
-#u520_img {
+#u541_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -205,7 +205,7 @@
   width:87px;
   height:30px;
 }
-#u520 {
+#u541 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -213,7 +213,7 @@
   width:87px;
   height:30px;
 }
-#u521 {
+#u542 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -221,7 +221,7 @@
   width:83px;
   word-wrap:break-word;
 }
-#u522_img {
+#u543_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -229,7 +229,7 @@
   width:87px;
   height:32px;
 }
-#u522 {
+#u543 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -237,7 +237,7 @@
   width:87px;
   height:32px;
 }
-#u523 {
+#u544 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -245,7 +245,7 @@
   width:83px;
   word-wrap:break-word;
 }
-#u524_img {
+#u545_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -253,7 +253,7 @@
   width:87px;
   height:32px;
 }
-#u524 {
+#u545 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -261,7 +261,7 @@
   width:87px;
   height:32px;
 }
-#u525 {
+#u546 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -269,7 +269,7 @@
   width:83px;
   word-wrap:break-word;
 }
-#u526_img {
+#u547_img {
   border-width:0px;
   position:absolute;
   left:-4px;
@@ -277,7 +277,7 @@
   width:40px;
   height:50px;
 }
-#u526 {
+#u547 {
   border-width:0px;
   position:absolute;
   left:104px;
@@ -285,7 +285,7 @@
   width:30px;
   height:40px;
 }
-#u527 {
+#u548 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -294,7 +294,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u528_div {
+#u549_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -309,7 +309,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u528 {
+#u549 {
   border-width:0px;
   position:absolute;
   left:154px;
@@ -317,7 +317,7 @@
   width:648px;
   height:329px;
 }
-#u529 {
+#u550 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -326,7 +326,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u530_img {
+#u551_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -334,7 +334,7 @@
   width:648px;
   height:335px;
 }
-#u530 {
+#u551 {
   border-width:0px;
   position:absolute;
   left:154px;
@@ -342,7 +342,7 @@
   width:648px;
   height:335px;
 }
-#u531 {
+#u552 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -351,7 +351,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u532 {
+#u553 {
   border-width:0px;
   position:absolute;
   left:347px;
@@ -359,7 +359,7 @@
   width:254px;
   height:66px;
 }
-#u533_img {
+#u554_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -367,7 +367,7 @@
   width:101px;
   height:32px;
 }
-#u533 {
+#u554 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -375,7 +375,7 @@
   width:101px;
   height:32px;
 }
-#u534 {
+#u555 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -383,7 +383,7 @@
   width:97px;
   word-wrap:break-word;
 }
-#u535_img {
+#u556_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -391,7 +391,7 @@
   width:148px;
   height:32px;
 }
-#u535 {
+#u556 {
   border-width:0px;
   position:absolute;
   left:101px;
@@ -399,7 +399,7 @@
   width:148px;
   height:32px;
 }
-#u536 {
+#u557 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -407,7 +407,7 @@
   width:144px;
   word-wrap:break-word;
 }
-#u537_img {
+#u558_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -415,7 +415,7 @@
   width:101px;
   height:29px;
 }
-#u537 {
+#u558 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -423,7 +423,7 @@
   width:101px;
   height:29px;
 }
-#u538 {
+#u559 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -431,7 +431,7 @@
   width:97px;
   word-wrap:break-word;
 }
-#u539_img {
+#u560_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -439,7 +439,7 @@
   width:148px;
   height:29px;
 }
-#u539 {
+#u560 {
   border-width:0px;
   position:absolute;
   left:101px;
@@ -447,7 +447,7 @@
   width:148px;
   height:29px;
 }
-#u540 {
+#u561 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -455,7 +455,7 @@
   width:144px;
   word-wrap:break-word;
 }
-#u541_div {
+#u562_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -474,7 +474,7 @@
   box-shadow:none;
   font-size:18px;
 }
-#u541 {
+#u562 {
   border-width:0px;
   position:absolute;
   left:390px;
@@ -483,7 +483,7 @@
   height:36px;
   font-size:18px;
 }
-#u542 {
+#u563 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -491,7 +491,7 @@
   width:148px;
   word-wrap:break-word;
 }
-#u543 {
+#u564 {
   border-width:0px;
   position:absolute;
   left:447px;
@@ -499,7 +499,7 @@
   width:149px;
   height:34px;
 }
-#u543_input {
+#u564_input {
   position:absolute;
   left:0px;
   top:0px;
@@ -513,7 +513,7 @@
   color:#000000;
   text-align:left;
 }
-#u544_div {
+#u565_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -533,7 +533,7 @@
   font-size:16px;
   color:#000000;
 }
-#u544 {
+#u565 {
   border-width:0px;
   position:absolute;
   left:366px;
@@ -546,7 +546,7 @@
   font-size:16px;
   color:#000000;
 }
-#u545 {
+#u566 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -554,7 +554,7 @@
   width:71px;
   white-space:nowrap;
 }
-#u546_div {
+#u567_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -574,7 +574,7 @@
   font-size:16px;
   color:#000000;
 }
-#u546 {
+#u567 {
   border-width:0px;
   position:absolute;
   left:366px;
@@ -587,7 +587,7 @@
   font-size:16px;
   color:#000000;
 }
-#u547 {
+#u568 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -595,7 +595,7 @@
   width:71px;
   white-space:nowrap;
 }
-#u548 {
+#u569 {
   border-width:0px;
   position:absolute;
   left:447px;
@@ -603,7 +603,7 @@
   width:149px;
   height:34px;
 }
-#u548_input {
+#u569_input {
   position:absolute;
   left:0px;
   top:0px;
@@ -617,7 +617,7 @@
   color:#000000;
   text-align:left;
 }
-#u549_div {
+#u570_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -637,7 +637,7 @@
   font-size:16px;
   color:#000000;
 }
-#u549 {
+#u570 {
   border-width:0px;
   position:absolute;
   left:347px;
@@ -650,7 +650,7 @@
   font-size:16px;
   color:#000000;
 }
-#u550 {
+#u571 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -658,7 +658,7 @@
   width:86px;
   word-wrap:break-word;
 }
-#u551_div {
+#u572_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -678,7 +678,7 @@
   font-size:16px;
   color:#000000;
 }
-#u551 {
+#u572 {
   border-width:0px;
   position:absolute;
   left:468px;
@@ -691,7 +691,7 @@
   font-size:16px;
   color:#000000;
 }
-#u552 {
+#u573 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -699,7 +699,7 @@
   width:86px;
   word-wrap:break-word;
 }
-#u553_div {
+#u574_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -716,7 +716,7 @@
   font-size:28px;
   color:#00CC00;
 }
-#u553 {
+#u574 {
   border-width:0px;
   position:absolute;
   left:526px;
@@ -726,7 +726,7 @@
   font-size:28px;
   color:#00CC00;
 }
-#u554 {
+#u575 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -734,7 +734,7 @@
   width:242px;
   word-wrap:break-word;
 }
-#u555_div {
+#u576_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -751,7 +751,7 @@
   font-size:16px;
   color:#00CC00;
 }
-#u555 {
+#u576 {
   border-width:0px;
   position:absolute;
   left:668px;
@@ -761,7 +761,7 @@
   font-size:16px;
   color:#00CC00;
 }
-#u556 {
+#u577 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -769,7 +769,7 @@
   width:118px;
   word-wrap:break-word;
 }
-#u557_img {
+#u578_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -777,7 +777,7 @@
   width:63px;
   height:2px;
 }
-#u557 {
+#u578 {
   border-width:0px;
   position:absolute;
   left:606px;
@@ -785,7 +785,7 @@
   width:62px;
   height:1px;
 }
-#u558 {
+#u579 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -794,7 +794,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u559 {
+#u580 {
   border-width:0px;
   position:absolute;
   left:734px;
@@ -802,7 +802,7 @@
   width:100px;
   height:30px;
 }
-#u559_menu {
+#u580_menu {
   border-width:0px;
   position:absolute;
   left:-3px;
@@ -814,7 +814,7 @@
   -ms-transform:rotate(NaNdeg);
   transform:rotate(NaNdeg);
 }
-#u560 {
+#u581 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -822,7 +822,7 @@
   width:105px;
   height:35px;
 }
-#u561_img {
+#u582_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -830,7 +830,7 @@
   width:100px;
   height:30px;
 }
-#u561 {
+#u582 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -838,7 +838,7 @@
   width:100px;
   height:30px;
 }
-#u562 {
+#u583 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -846,7 +846,7 @@
   width:96px;
   word-wrap:break-word;
 }
-#u563 {
+#u584 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -855,7 +855,7 @@
   height:60px;
   visibility:hidden;
 }
-#u563_menu {
+#u584_menu {
   border-width:0px;
   position:absolute;
   left:-3px;
@@ -867,7 +867,7 @@
   -ms-transform:rotate(NaNdeg);
   transform:rotate(NaNdeg);
 }
-#u564 {
+#u585 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -875,7 +875,7 @@
   width:105px;
   height:65px;
 }
-#u565_img {
+#u586_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -883,7 +883,7 @@
   width:100px;
   height:30px;
 }
-#u565 {
+#u586 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -891,7 +891,7 @@
   width:100px;
   height:30px;
 }
-#u566 {
+#u587 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -899,7 +899,7 @@
   width:96px;
   word-wrap:break-word;
 }
-#u567_img {
+#u588_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -907,7 +907,7 @@
   width:100px;
   height:30px;
 }
-#u567 {
+#u588 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -915,7 +915,7 @@
   width:100px;
   height:30px;
 }
-#u568 {
+#u589 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -923,7 +923,7 @@
   width:96px;
   word-wrap:break-word;
 }
-#u569_img {
+#u590_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -931,7 +931,7 @@
   width:207px;
   height:2px;
 }
-#u569 {
+#u590 {
   border-width:0px;
   position:absolute;
   left:320px;
@@ -939,12 +939,70 @@
   width:206px;
   height:1px;
 }
-#u570 {
+#u591 {
   border-width:0px;
   position:absolute;
   left:2px;
   top:-8px;
   width:202px;
   visibility:hidden;
+  word-wrap:break-word;
+}
+#u592_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:276px;
+  height:2px;
+}
+#u592 {
+  border-width:0px;
+  position:absolute;
+  left:591px;
+  top:299px;
+  width:275px;
+  height:1px;
+}
+#u593 {
+  border-width:0px;
+  position:absolute;
+  left:2px;
+  top:-8px;
+  width:271px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u594_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:312px;
+  height:37px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-size:20px;
+}
+#u594 {
+  border-width:0px;
+  position:absolute;
+  left:834px;
+  top:252px;
+  width:312px;
+  height:37px;
+  font-size:20px;
+}
+#u595 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:312px;
   word-wrap:break-word;
 }
