--- a/test6/ui/files/评定成绩/styles.css
+++ b/test6/ui/files/评定成绩/styles.css
@@ -3,7 +3,7 @@
   background-image:none;
   position:static;
   left:auto;
-  width:1169px;
+  width:1269px;
   margin-left:0;
   margin-right:0;
   text-align:left;
@@ -1412,8 +1412,8 @@
 #u187 {
   border-width:0px;
   position:absolute;
-  left:909px;
-  top:371px;
+  left:916px;
+  top:359px;
   width:108px;
   height:23px;
   font-size:13px;
@@ -1691,7 +1691,6 @@
   -webkit-box-shadow:none;
   box-shadow:none;
   font-size:18px;
-  color:#00CC00;
 }
 #u207 {
   border-width:0px;
@@ -1701,7 +1700,6 @@
   width:302px;
   height:26px;
   font-size:18px;
-  color:#00CC00;
 }
 #u208 {
   border-width:0px;
@@ -1711,7 +1709,7 @@
   width:302px;
   word-wrap:break-word;
 }
-#u209_div {
+#u210_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -1726,9 +1724,8 @@
   -webkit-box-shadow:none;
   box-shadow:none;
   font-size:18px;
-  color:#00CC00;
 }
-#u209 {
+#u210 {
   border-width:0px;
   position:absolute;
   left:862px;
@@ -1736,9 +1733,8 @@
   width:285px;
   height:26px;
   font-size:18px;
-  color:#00CC00;
 }
-#u210 {
+#u211 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -1746,7 +1742,7 @@
   width:285px;
   word-wrap:break-word;
 }
-#u211_img {
+#u213_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -1754,7 +1750,7 @@
   width:464px;
   height:2px;
 }
-#u211 {
+#u213 {
   border-width:0px;
   position:absolute;
   left:399px;
@@ -1762,7 +1758,7 @@
   width:463px;
   height:1px;
 }
-#u212 {
+#u214 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -1771,7 +1767,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u213_img {
+#u215_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -1779,7 +1775,7 @@
   width:129px;
   height:2px;
 }
-#u213 {
+#u215 {
   border-width:0px;
   position:absolute;
   left:834px;
@@ -1788,7 +1784,7 @@
   height:1px;
   color:#00CC00;
 }
-#u214 {
+#u216 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -1797,7 +1793,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u215_div {
+#u217_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -1815,7 +1811,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u215 {
+#u217 {
   border-width:0px;
   position:absolute;
   left:634px;
@@ -1823,46 +1819,12 @@
   width:83px;
   height:24px;
 }
-#u216 {
-  border-width:0px;
-  position:absolute;
-  left:2px;
-  top:4px;
-  width:79px;
-  word-wrap:break-word;
-}
-#u217_div {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:57px;
-  height:22px;
-  background:inherit;
-  background-color:rgba(255, 255, 255, 1);
-  box-sizing:border-box;
-  border-width:1px;
-  border-style:solid;
-  border-color:rgba(121, 121, 121, 1);
-  border-radius:5px;
-  -moz-box-shadow:none;
-  -webkit-box-shadow:none;
-  box-shadow:none;
-}
-#u217 {
-  border-width:0px;
-  position:absolute;
-  left:591px;
-  top:371px;
-  width:57px;
-  height:22px;
-}
 #u218 {
   border-width:0px;
   position:absolute;
   left:2px;
   top:4px;
-  width:53px;
+  width:79px;
   word-wrap:break-word;
 }
 #u219_div {
@@ -1886,7 +1848,7 @@
 #u219 {
   border-width:0px;
   position:absolute;
-  left:658px;
+  left:591px;
   top:371px;
   width:57px;
   height:22px;
@@ -1899,7 +1861,41 @@
   width:53px;
   word-wrap:break-word;
 }
+#u221_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:57px;
+  height:22px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 1);
+  box-sizing:border-box;
+  border-width:1px;
+  border-style:solid;
+  border-color:rgba(121, 121, 121, 1);
+  border-radius:5px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+}
 #u221 {
+  border-width:0px;
+  position:absolute;
+  left:658px;
+  top:371px;
+  width:57px;
+  height:22px;
+}
+#u222 {
+  border-width:0px;
+  position:absolute;
+  left:2px;
+  top:4px;
+  width:53px;
+  word-wrap:break-word;
+}
+#u223 {
   border-width:0px;
   position:absolute;
   left:391px;
@@ -1907,7 +1903,7 @@
   width:72px;
   height:23px;
 }
-#u221_input {
+#u223_input {
   position:absolute;
   left:0px;
   top:0px;
@@ -1920,10 +1916,10 @@
   text-decoration:none;
   color:#000000;
 }
-#u221_input:disabled {
+#u223_input:disabled {
   color:grayText;
 }
-#u222_div {
+#u224_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -1940,7 +1936,7 @@
   font-size:16px;
   color:#003300;
 }
-#u222 {
+#u224 {
   border-width:0px;
   position:absolute;
   left:367px;
@@ -1950,7 +1946,7 @@
   font-size:16px;
   color:#003300;
 }
-#u223 {
+#u225 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -1958,7 +1954,7 @@
   width:119px;
   word-wrap:break-word;
 }
-#u224_img {
+#u226_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -1966,15 +1962,15 @@
   width:129px;
   height:2px;
 }
-#u224 {
+#u226 {
   border-width:0px;
   position:absolute;
-  left:792px;
-  top:392px;
+  left:802px;
+  top:382px;
   width:128px;
   height:1px;
 }
-#u225 {
+#u227 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -1983,7 +1979,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u226_img {
+#u228_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -1991,7 +1987,7 @@
   width:457px;
   height:2px;
 }
-#u226 {
+#u228 {
   border-width:0px;
   position:absolute;
   left:406px;
@@ -1999,7 +1995,7 @@
   width:456px;
   height:1px;
 }
-#u227 {
+#u229 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -2008,7 +2004,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u228_div {
+#u230_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -2023,9 +2019,8 @@
   -webkit-box-shadow:none;
   box-shadow:none;
   font-size:18px;
-  color:#00CC00;
 }
-#u228 {
+#u230 {
   border-width:0px;
   position:absolute;
   left:867px;
@@ -2033,13 +2028,70 @@
   width:302px;
   height:26px;
   font-size:18px;
-  color:#00CC00;
 }
-#u229 {
+#u231 {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
   width:302px;
+  word-wrap:break-word;
+}
+#u233_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:262px;
+  height:2px;
+}
+#u233 {
+  border-width:0px;
+  position:absolute;
+  left:658px;
+  top:403px;
+  width:261px;
+  height:1px;
+}
+#u234 {
+  border-width:0px;
+  position:absolute;
+  left:2px;
+  top:-8px;
+  width:257px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u235_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:392px;
+  height:26px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-size:18px;
+}
+#u235 {
+  border-width:0px;
+  position:absolute;
+  left:877px;
+  top:414px;
+  width:392px;
+  height:26px;
+  font-size:18px;
+}
+#u236 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:392px;
   word-wrap:break-word;
 }
