--- a/test6/ui/files/个人信息/styles.css
+++ b/test6/ui/files/个人信息/styles.css
@@ -3,7 +3,7 @@
   background-image:none;
   position:static;
   left:auto;
-  width:834px;
+  width:1146px;
   margin-left:0;
   margin-right:0;
   text-align:left;
@@ -12,7 +12,7 @@
   position:absolute;
   z-index:0;
 }
-#u439_div {
+#u455_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -30,7 +30,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u439 {
+#u455 {
   border-width:0px;
   position:absolute;
   left:35px;
@@ -38,7 +38,7 @@
   width:799px;
   height:434px;
 }
-#u440 {
+#u456 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -47,7 +47,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u441_img {
+#u457_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -55,7 +55,7 @@
   width:799px;
   height:58px;
 }
-#u441 {
+#u457 {
   border-width:0px;
   position:absolute;
   left:35px;
@@ -68,7 +68,7 @@
   font-size:28px;
   color:#FFFFFF;
 }
-#u442 {
+#u458 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -76,7 +76,7 @@
   width:795px;
   word-wrap:break-word;
 }
-#u443 {
+#u459 {
   border-width:0px;
   position:absolute;
   left:122px;
@@ -84,7 +84,7 @@
   width:708px;
   height:372px;
 }
-#u443_input {
+#u459_input {
   border-width:2px;
   position:absolute;
   left:0px;
@@ -93,7 +93,7 @@
   height:372px;
   overflow:auto;
 }
-#u444 {
+#u460 {
   border-width:0px;
   position:absolute;
   left:35px;
@@ -101,7 +101,7 @@
   width:87px;
   height:192px;
 }
-#u444_menu {
+#u460_menu {
   border-width:0px;
   position:absolute;
   left:-3px;
@@ -113,7 +113,7 @@
   -ms-transform:rotate(NaNdeg);
   transform:rotate(NaNdeg);
 }
-#u445 {
+#u461 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -121,7 +121,7 @@
   width:92px;
   height:197px;
 }
-#u446_img {
+#u462_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -129,7 +129,7 @@
   width:87px;
   height:28px;
 }
-#u446 {
+#u462 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -141,7 +141,7 @@
   font-style:normal;
   color:#000000;
 }
-#u447 {
+#u463 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -149,7 +149,7 @@
   width:83px;
   word-wrap:break-word;
 }
-#u448_img {
+#u464_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -157,7 +157,7 @@
   width:87px;
   height:34px;
 }
-#u448 {
+#u464 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -165,7 +165,7 @@
   width:87px;
   height:34px;
 }
-#u449 {
+#u465 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -173,7 +173,7 @@
   width:83px;
   word-wrap:break-word;
 }
-#u450_img {
+#u466_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -181,7 +181,7 @@
   width:87px;
   height:36px;
 }
-#u450 {
+#u466 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -189,7 +189,7 @@
   width:87px;
   height:36px;
 }
-#u451 {
+#u467 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -197,7 +197,7 @@
   width:83px;
   word-wrap:break-word;
 }
-#u452_img {
+#u468_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -205,7 +205,7 @@
   width:87px;
   height:30px;
 }
-#u452 {
+#u468 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -213,7 +213,7 @@
   width:87px;
   height:30px;
 }
-#u453 {
+#u469 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -221,7 +221,7 @@
   width:83px;
   word-wrap:break-word;
 }
-#u454_img {
+#u470_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -229,7 +229,7 @@
   width:87px;
   height:32px;
 }
-#u454 {
+#u470 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -237,7 +237,7 @@
   width:87px;
   height:32px;
 }
-#u455 {
+#u471 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -245,7 +245,7 @@
   width:83px;
   word-wrap:break-word;
 }
-#u456_img {
+#u472_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -253,7 +253,7 @@
   width:87px;
   height:32px;
 }
-#u456 {
+#u472 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -261,7 +261,7 @@
   width:87px;
   height:32px;
 }
-#u457 {
+#u473 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -269,7 +269,7 @@
   width:83px;
   word-wrap:break-word;
 }
-#u458_img {
+#u474_img {
   border-width:0px;
   position:absolute;
   left:-4px;
@@ -277,7 +277,7 @@
   width:40px;
   height:50px;
 }
-#u458 {
+#u474 {
   border-width:0px;
   position:absolute;
   left:104px;
@@ -285,7 +285,7 @@
   width:30px;
   height:40px;
 }
-#u459 {
+#u475 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -294,7 +294,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u460_div {
+#u476_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -309,7 +309,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u460 {
+#u476 {
   border-width:0px;
   position:absolute;
   left:154px;
@@ -317,7 +317,7 @@
   width:648px;
   height:329px;
 }
-#u461 {
+#u477 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -326,7 +326,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u462 {
+#u478 {
   border-width:0px;
   position:absolute;
   left:314px;
@@ -334,219 +334,27 @@
   width:270px;
   height:212px;
 }
-#u463_img {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:133px;
-  height:43px;
-}
-#u463 {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:133px;
-  height:43px;
-}
-#u464 {
-  border-width:0px;
-  position:absolute;
-  left:2px;
-  top:14px;
-  width:129px;
-  word-wrap:break-word;
-}
-#u465_img {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:132px;
-  height:43px;
-}
-#u465 {
-  border-width:0px;
-  position:absolute;
-  left:133px;
-  top:0px;
-  width:132px;
-  height:43px;
-}
-#u466 {
-  border-width:0px;
-  position:absolute;
-  left:2px;
-  top:14px;
-  width:128px;
-  word-wrap:break-word;
-}
-#u467_img {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:133px;
-  height:43px;
-}
-#u467 {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:43px;
-  width:133px;
-  height:43px;
-}
-#u468 {
-  border-width:0px;
-  position:absolute;
-  left:2px;
-  top:14px;
-  width:129px;
-  word-wrap:break-word;
-}
-#u469_img {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:132px;
-  height:43px;
-}
-#u469 {
-  border-width:0px;
-  position:absolute;
-  left:133px;
-  top:43px;
-  width:132px;
-  height:43px;
-}
-#u470 {
-  border-width:0px;
-  position:absolute;
-  left:2px;
-  top:14px;
-  width:128px;
-  word-wrap:break-word;
-}
-#u471_img {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:133px;
-  height:43px;
-}
-#u471 {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:86px;
-  width:133px;
-  height:43px;
-}
-#u472 {
-  border-width:0px;
-  position:absolute;
-  left:2px;
-  top:14px;
-  width:129px;
-  word-wrap:break-word;
-}
-#u473_img {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:132px;
-  height:43px;
-}
-#u473 {
-  border-width:0px;
-  position:absolute;
-  left:133px;
-  top:86px;
-  width:132px;
-  height:43px;
-}
-#u474 {
-  border-width:0px;
-  position:absolute;
-  left:2px;
-  top:14px;
-  width:128px;
-  word-wrap:break-word;
-}
-#u475_img {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:133px;
-  height:43px;
-}
-#u475 {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:129px;
-  width:133px;
-  height:43px;
-}
-#u476 {
-  border-width:0px;
-  position:absolute;
-  left:2px;
-  top:14px;
-  width:129px;
-  word-wrap:break-word;
-}
-#u477_img {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:132px;
-  height:43px;
-}
-#u477 {
-  border-width:0px;
-  position:absolute;
-  left:133px;
-  top:129px;
-  width:132px;
-  height:43px;
-}
-#u478 {
-  border-width:0px;
-  position:absolute;
-  left:2px;
-  top:14px;
-  width:128px;
-  word-wrap:break-word;
-}
 #u479_img {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
   width:133px;
-  height:35px;
+  height:43px;
 }
 #u479 {
   border-width:0px;
   position:absolute;
   left:0px;
-  top:172px;
+  top:0px;
   width:133px;
-  height:35px;
+  height:43px;
 }
 #u480 {
   border-width:0px;
   position:absolute;
   left:2px;
-  top:10px;
+  top:14px;
   width:129px;
   word-wrap:break-word;
 }
@@ -556,9 +364,201 @@
   left:0px;
   top:0px;
   width:132px;
-  height:35px;
+  height:43px;
 }
 #u481 {
+  border-width:0px;
+  position:absolute;
+  left:133px;
+  top:0px;
+  width:132px;
+  height:43px;
+}
+#u482 {
+  border-width:0px;
+  position:absolute;
+  left:2px;
+  top:14px;
+  width:128px;
+  word-wrap:break-word;
+}
+#u483_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:133px;
+  height:43px;
+}
+#u483 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:43px;
+  width:133px;
+  height:43px;
+}
+#u484 {
+  border-width:0px;
+  position:absolute;
+  left:2px;
+  top:14px;
+  width:129px;
+  word-wrap:break-word;
+}
+#u485_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:132px;
+  height:43px;
+}
+#u485 {
+  border-width:0px;
+  position:absolute;
+  left:133px;
+  top:43px;
+  width:132px;
+  height:43px;
+}
+#u486 {
+  border-width:0px;
+  position:absolute;
+  left:2px;
+  top:14px;
+  width:128px;
+  word-wrap:break-word;
+}
+#u487_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:133px;
+  height:43px;
+}
+#u487 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:86px;
+  width:133px;
+  height:43px;
+}
+#u488 {
+  border-width:0px;
+  position:absolute;
+  left:2px;
+  top:14px;
+  width:129px;
+  word-wrap:break-word;
+}
+#u489_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:132px;
+  height:43px;
+}
+#u489 {
+  border-width:0px;
+  position:absolute;
+  left:133px;
+  top:86px;
+  width:132px;
+  height:43px;
+}
+#u490 {
+  border-width:0px;
+  position:absolute;
+  left:2px;
+  top:14px;
+  width:128px;
+  word-wrap:break-word;
+}
+#u491_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:133px;
+  height:43px;
+}
+#u491 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:129px;
+  width:133px;
+  height:43px;
+}
+#u492 {
+  border-width:0px;
+  position:absolute;
+  left:2px;
+  top:14px;
+  width:129px;
+  word-wrap:break-word;
+}
+#u493_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:132px;
+  height:43px;
+}
+#u493 {
+  border-width:0px;
+  position:absolute;
+  left:133px;
+  top:129px;
+  width:132px;
+  height:43px;
+}
+#u494 {
+  border-width:0px;
+  position:absolute;
+  left:2px;
+  top:14px;
+  width:128px;
+  word-wrap:break-word;
+}
+#u495_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:133px;
+  height:35px;
+}
+#u495 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:172px;
+  width:133px;
+  height:35px;
+}
+#u496 {
+  border-width:0px;
+  position:absolute;
+  left:2px;
+  top:10px;
+  width:129px;
+  word-wrap:break-word;
+}
+#u497_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:132px;
+  height:35px;
+}
+#u497 {
   border-width:0px;
   position:absolute;
   left:133px;
@@ -566,7 +566,7 @@
   width:132px;
   height:35px;
 }
-#u482 {
+#u498 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -574,7 +574,7 @@
   width:128px;
   word-wrap:break-word;
 }
-#u483_div {
+#u499_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -593,7 +593,7 @@
   box-shadow:none;
   font-size:18px;
 }
-#u483 {
+#u499 {
   border-width:0px;
   position:absolute;
   left:359px;
@@ -602,7 +602,7 @@
   height:36px;
   font-size:18px;
 }
-#u484 {
+#u500 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -610,7 +610,7 @@
   width:148px;
   word-wrap:break-word;
 }
-#u485_div {
+#u501_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -630,7 +630,7 @@
   font-size:16px;
   color:#000000;
 }
-#u485 {
+#u501 {
   border-width:0px;
   position:absolute;
   left:328px;
@@ -643,7 +643,7 @@
   font-size:16px;
   color:#000000;
 }
-#u486 {
+#u502 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -651,7 +651,7 @@
   width:86px;
   word-wrap:break-word;
 }
-#u487_div {
+#u503_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -671,7 +671,7 @@
   font-size:16px;
   color:#000000;
 }
-#u487 {
+#u503 {
   border-width:0px;
   position:absolute;
   left:470px;
@@ -684,7 +684,7 @@
   font-size:16px;
   color:#000000;
 }
-#u488 {
+#u504 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -692,7 +692,7 @@
   width:86px;
   word-wrap:break-word;
 }
-#u489_div {
+#u505_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -709,7 +709,7 @@
   font-size:28px;
   color:#00CC00;
 }
-#u489 {
+#u505 {
   border-width:0px;
   position:absolute;
   left:526px;
@@ -719,7 +719,7 @@
   font-size:28px;
   color:#00CC00;
 }
-#u490 {
+#u506 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -727,7 +727,7 @@
   width:242px;
   word-wrap:break-word;
 }
-#u491_div {
+#u507_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -744,7 +744,7 @@
   font-size:16px;
   color:#00CC00;
 }
-#u491 {
+#u507 {
   border-width:0px;
   position:absolute;
   left:661px;
@@ -754,7 +754,7 @@
   font-size:16px;
   color:#00CC00;
 }
-#u492 {
+#u508 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -762,7 +762,7 @@
   width:118px;
   word-wrap:break-word;
 }
-#u493_img {
+#u509_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -770,7 +770,7 @@
   width:63px;
   height:2px;
 }
-#u493 {
+#u509 {
   border-width:0px;
   position:absolute;
   left:589px;
@@ -778,7 +778,7 @@
   width:62px;
   height:1px;
 }
-#u494 {
+#u510 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -787,7 +787,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u495_img {
+#u511_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -795,7 +795,7 @@
   width:207px;
   height:2px;
 }
-#u495 {
+#u511 {
   border-width:0px;
   position:absolute;
   left:320px;
@@ -803,7 +803,7 @@
   width:206px;
   height:1px;
 }
-#u496 {
+#u512 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -812,7 +812,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u497 {
+#u513 {
   border-width:0px;
   position:absolute;
   left:734px;
@@ -820,7 +820,7 @@
   width:100px;
   height:30px;
 }
-#u497_menu {
+#u513_menu {
   border-width:0px;
   position:absolute;
   left:-3px;
@@ -832,7 +832,7 @@
   -ms-transform:rotate(NaNdeg);
   transform:rotate(NaNdeg);
 }
-#u498 {
+#u514 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -840,7 +840,7 @@
   width:105px;
   height:35px;
 }
-#u499_img {
+#u515_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -848,7 +848,7 @@
   width:100px;
   height:30px;
 }
-#u499 {
+#u515 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -856,7 +856,7 @@
   width:100px;
   height:30px;
 }
-#u500 {
+#u516 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -864,7 +864,7 @@
   width:96px;
   word-wrap:break-word;
 }
-#u501 {
+#u517 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -873,7 +873,7 @@
   height:60px;
   visibility:hidden;
 }
-#u501_menu {
+#u517_menu {
   border-width:0px;
   position:absolute;
   left:-3px;
@@ -885,7 +885,7 @@
   -ms-transform:rotate(NaNdeg);
   transform:rotate(NaNdeg);
 }
-#u502 {
+#u518 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -893,7 +893,7 @@
   width:105px;
   height:65px;
 }
-#u503_img {
+#u519_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -901,7 +901,7 @@
   width:100px;
   height:30px;
 }
-#u503 {
+#u519 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -909,7 +909,7 @@
   width:100px;
   height:30px;
 }
-#u504 {
+#u520 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -917,7 +917,7 @@
   width:96px;
   word-wrap:break-word;
 }
-#u505_img {
+#u521_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -925,7 +925,7 @@
   width:100px;
   height:30px;
 }
-#u505 {
+#u521 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -933,11 +933,69 @@
   width:100px;
   height:30px;
 }
-#u506 {
+#u522 {
   border-width:0px;
   position:absolute;
   left:2px;
   top:8px;
   width:96px;
+  word-wrap:break-word;
+}
+#u523_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:276px;
+  height:2px;
+}
+#u523 {
+  border-width:0px;
+  position:absolute;
+  left:591px;
+  top:299px;
+  width:275px;
+  height:1px;
+}
+#u524 {
+  border-width:0px;
+  position:absolute;
+  left:2px;
+  top:-8px;
+  width:271px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u525_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:312px;
+  height:37px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-size:20px;
+}
+#u525 {
+  border-width:0px;
+  position:absolute;
+  left:834px;
+  top:252px;
+  width:312px;
+  height:37px;
+  font-size:20px;
+}
+#u526 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:312px;
   word-wrap:break-word;
 }
