--- a/test6/ui/files/安全退出/styles.css
+++ b/test6/ui/files/安全退出/styles.css
@@ -3,7 +3,7 @@
   background-image:none;
   position:static;
   left:auto;
-  width:834px;
+  width:1129px;
   margin-left:0;
   margin-right:0;
   text-align:left;
@@ -12,7 +12,7 @@
   position:absolute;
   z-index:0;
 }
-#u571_div {
+#u597_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -30,7 +30,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u571 {
+#u597 {
   border-width:0px;
   position:absolute;
   left:35px;
@@ -38,7 +38,7 @@
   width:799px;
   height:434px;
 }
-#u572 {
+#u598 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -47,7 +47,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u573_img {
+#u599_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -55,7 +55,7 @@
   width:799px;
   height:58px;
 }
-#u573 {
+#u599 {
   border-width:0px;
   position:absolute;
   left:35px;
@@ -68,7 +68,7 @@
   font-size:28px;
   color:#FFFFFF;
 }
-#u574 {
+#u600 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -76,7 +76,7 @@
   width:795px;
   word-wrap:break-word;
 }
-#u575 {
+#u601 {
   border-width:0px;
   position:absolute;
   left:122px;
@@ -84,7 +84,7 @@
   width:708px;
   height:372px;
 }
-#u575_input {
+#u601_input {
   border-width:2px;
   position:absolute;
   left:0px;
@@ -93,7 +93,7 @@
   height:372px;
   overflow:auto;
 }
-#u576 {
+#u602 {
   border-width:0px;
   position:absolute;
   left:35px;
@@ -101,7 +101,7 @@
   width:87px;
   height:192px;
 }
-#u576_menu {
+#u602_menu {
   border-width:0px;
   position:absolute;
   left:-3px;
@@ -113,7 +113,7 @@
   -ms-transform:rotate(NaNdeg);
   transform:rotate(NaNdeg);
 }
-#u577 {
+#u603 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -121,7 +121,7 @@
   width:92px;
   height:197px;
 }
-#u578_img {
+#u604_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -129,7 +129,7 @@
   width:87px;
   height:28px;
 }
-#u578 {
+#u604 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -141,7 +141,7 @@
   font-style:normal;
   color:#000000;
 }
-#u579 {
+#u605 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -149,7 +149,7 @@
   width:83px;
   word-wrap:break-word;
 }
-#u580_img {
+#u606_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -157,7 +157,7 @@
   width:87px;
   height:34px;
 }
-#u580 {
+#u606 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -165,7 +165,7 @@
   width:87px;
   height:34px;
 }
-#u581 {
+#u607 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -173,7 +173,7 @@
   width:83px;
   word-wrap:break-word;
 }
-#u582_img {
+#u608_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -181,7 +181,7 @@
   width:87px;
   height:36px;
 }
-#u582 {
+#u608 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -189,7 +189,7 @@
   width:87px;
   height:36px;
 }
-#u583 {
+#u609 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -197,7 +197,7 @@
   width:83px;
   word-wrap:break-word;
 }
-#u584_img {
+#u610_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -205,7 +205,7 @@
   width:87px;
   height:30px;
 }
-#u584 {
+#u610 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -213,7 +213,7 @@
   width:87px;
   height:30px;
 }
-#u585 {
+#u611 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -221,7 +221,7 @@
   width:83px;
   word-wrap:break-word;
 }
-#u586_img {
+#u612_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -229,7 +229,7 @@
   width:87px;
   height:32px;
 }
-#u586 {
+#u612 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -237,7 +237,7 @@
   width:87px;
   height:32px;
 }
-#u587 {
+#u613 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -245,7 +245,7 @@
   width:83px;
   word-wrap:break-word;
 }
-#u588_img {
+#u614_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -253,7 +253,7 @@
   width:87px;
   height:32px;
 }
-#u588 {
+#u614 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -261,7 +261,7 @@
   width:87px;
   height:32px;
 }
-#u589 {
+#u615 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -269,7 +269,7 @@
   width:83px;
   word-wrap:break-word;
 }
-#u590_img {
+#u616_img {
   border-width:0px;
   position:absolute;
   left:-4px;
@@ -277,7 +277,7 @@
   width:40px;
   height:50px;
 }
-#u590 {
+#u616 {
   border-width:0px;
   position:absolute;
   left:104px;
@@ -285,7 +285,7 @@
   width:30px;
   height:40px;
 }
-#u591 {
+#u617 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -294,7 +294,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u592_div {
+#u618_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -309,7 +309,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u592 {
+#u618 {
   border-width:0px;
   position:absolute;
   left:154px;
@@ -317,7 +317,7 @@
   width:648px;
   height:329px;
 }
-#u593 {
+#u619 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -326,7 +326,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u594_img {
+#u620_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -334,7 +334,7 @@
   width:394px;
   height:329px;
 }
-#u594 {
+#u620 {
   border-width:0px;
   position:absolute;
   left:273px;
@@ -342,7 +342,7 @@
   width:394px;
   height:329px;
 }
-#u595 {
+#u621 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -351,7 +351,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u596_div {
+#u622_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -370,7 +370,7 @@
   box-shadow:none;
   font-size:18px;
 }
-#u596 {
+#u622 {
   border-width:0px;
   position:absolute;
   left:396px;
@@ -379,7 +379,7 @@
   height:36px;
   font-size:18px;
 }
-#u597 {
+#u623 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -387,7 +387,7 @@
   width:148px;
   word-wrap:break-word;
 }
-#u598_div {
+#u624_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -407,7 +407,7 @@
   font-size:16px;
   color:#000000;
 }
-#u598 {
+#u624 {
   border-width:0px;
   position:absolute;
   left:367px;
@@ -420,7 +420,7 @@
   font-size:16px;
   color:#000000;
 }
-#u599 {
+#u625 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -428,7 +428,7 @@
   width:86px;
   word-wrap:break-word;
 }
-#u600_div {
+#u626_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -448,7 +448,7 @@
   font-size:16px;
   color:#000000;
 }
-#u600 {
+#u626 {
   border-width:0px;
   position:absolute;
   left:482px;
@@ -461,7 +461,7 @@
   font-size:16px;
   color:#000000;
 }
-#u601 {
+#u627 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -469,7 +469,7 @@
   width:86px;
   word-wrap:break-word;
 }
-#u602_div {
+#u628_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -485,7 +485,7 @@
   box-shadow:none;
   font-size:18px;
 }
-#u602 {
+#u628 {
   border-width:0px;
   position:absolute;
   left:420px;
@@ -494,7 +494,7 @@
   height:27px;
   font-size:18px;
 }
-#u603 {
+#u629 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -502,7 +502,7 @@
   width:143px;
   word-wrap:break-word;
 }
-#u604_div {
+#u630_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -519,7 +519,7 @@
   font-size:28px;
   color:#00CC00;
 }
-#u604 {
+#u630 {
   border-width:0px;
   position:absolute;
   left:526px;
@@ -529,7 +529,7 @@
   font-size:28px;
   color:#00CC00;
 }
-#u605 {
+#u631 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -537,68 +537,68 @@
   width:242px;
   word-wrap:break-word;
 }
-#u606 {
+#u632 {
   border-width:0px;
   position:absolute;
   left:734px;
-  top:28px;
+  top:32px;
   width:100px;
-  height:30px;
+  height:26px;
 }
-#u606_menu {
+#u632_menu {
   border-width:0px;
   position:absolute;
   left:-3px;
   top:-3px;
   width:106px;
-  height:36px;
+  height:32px;
   -webkit-transform:rotate(NaNdeg);
   -moz-transform:rotate(NaNdeg);
   -ms-transform:rotate(NaNdeg);
   transform:rotate(NaNdeg);
 }
-#u607 {
+#u633 {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
   width:105px;
-  height:35px;
+  height:31px;
 }
-#u608_img {
+#u634_img {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
   width:100px;
-  height:30px;
+  height:26px;
 }
-#u608 {
+#u634 {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
   width:100px;
-  height:30px;
+  height:26px;
 }
-#u609 {
+#u635 {
   border-width:0px;
   position:absolute;
   left:2px;
-  top:8px;
+  top:6px;
   width:96px;
   word-wrap:break-word;
 }
-#u610 {
+#u636 {
   border-width:0px;
   position:absolute;
   left:0px;
-  top:30px;
+  top:26px;
   width:100px;
   height:60px;
   visibility:hidden;
 }
-#u610_menu {
+#u636_menu {
   border-width:0px;
   position:absolute;
   left:-3px;
@@ -610,7 +610,7 @@
   -ms-transform:rotate(NaNdeg);
   transform:rotate(NaNdeg);
 }
-#u611 {
+#u637 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -618,7 +618,7 @@
   width:105px;
   height:65px;
 }
-#u612_img {
+#u638_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -626,7 +626,7 @@
   width:100px;
   height:30px;
 }
-#u612 {
+#u638 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -634,7 +634,7 @@
   width:100px;
   height:30px;
 }
-#u613 {
+#u639 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -642,7 +642,7 @@
   width:96px;
   word-wrap:break-word;
 }
-#u614_img {
+#u640_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -650,7 +650,7 @@
   width:100px;
   height:30px;
 }
-#u614 {
+#u640 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -658,7 +658,7 @@
   width:100px;
   height:30px;
 }
-#u615 {
+#u641 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -666,7 +666,7 @@
   width:96px;
   word-wrap:break-word;
 }
-#u616_img {
+#u642_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -674,7 +674,7 @@
   width:207px;
   height:2px;
 }
-#u616 {
+#u642 {
   border-width:0px;
   position:absolute;
   left:310px;
@@ -682,12 +682,71 @@
   width:206px;
   height:1px;
 }
-#u617 {
+#u643 {
   border-width:0px;
   position:absolute;
   left:2px;
   top:-8px;
   width:202px;
   visibility:hidden;
+  word-wrap:break-word;
+}
+#u644_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:129px;
+  height:2px;
+}
+#u644 {
+  border-width:0px;
+  position:absolute;
+  left:834px;
+  top:110px;
+  width:128px;
+  height:1px;
+  color:#00CC00;
+}
+#u645 {
+  border-width:0px;
+  position:absolute;
+  left:2px;
+  top:-8px;
+  width:124px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u646_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:262px;
+  height:26px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-size:18px;
+}
+#u646 {
+  border-width:0px;
+  position:absolute;
+  left:867px;
+  top:74px;
+  width:262px;
+  height:26px;
+  font-size:18px;
+}
+#u647 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:262px;
   word-wrap:break-word;
 }
