--- a/test6/ui/files/修改密码/styles.css
+++ b/test6/ui/files/修改密码/styles.css
@@ -12,7 +12,7 @@
   position:absolute;
   z-index:0;
 }
-#u528_div {
+#u547_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -30,7 +30,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u528 {
+#u547 {
   border-width:0px;
   position:absolute;
   left:35px;
@@ -38,7 +38,7 @@
   width:799px;
   height:434px;
 }
-#u529 {
+#u548 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -47,7 +47,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u530_img {
+#u549_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -55,7 +55,7 @@
   width:799px;
   height:58px;
 }
-#u530 {
+#u549 {
   border-width:0px;
   position:absolute;
   left:35px;
@@ -68,7 +68,7 @@
   font-size:28px;
   color:#FFFFFF;
 }
-#u531 {
+#u550 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -76,7 +76,7 @@
   width:795px;
   word-wrap:break-word;
 }
-#u532 {
+#u551 {
   border-width:0px;
   position:absolute;
   left:122px;
@@ -84,7 +84,7 @@
   width:708px;
   height:372px;
 }
-#u532_input {
+#u551_input {
   border-width:2px;
   position:absolute;
   left:0px;
@@ -93,7 +93,7 @@
   height:372px;
   overflow:auto;
 }
-#u533 {
+#u552 {
   border-width:0px;
   position:absolute;
   left:35px;
@@ -101,7 +101,7 @@
   width:87px;
   height:192px;
 }
-#u533_menu {
+#u552_menu {
   border-width:0px;
   position:absolute;
   left:-3px;
@@ -113,7 +113,7 @@
   -ms-transform:rotate(NaNdeg);
   transform:rotate(NaNdeg);
 }
-#u534 {
+#u553 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -121,7 +121,7 @@
   width:92px;
   height:197px;
 }
-#u535_img {
+#u554_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -129,7 +129,7 @@
   width:87px;
   height:28px;
 }
-#u535 {
+#u554 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -141,7 +141,7 @@
   font-style:normal;
   color:#000000;
 }
-#u536 {
+#u555 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -149,7 +149,7 @@
   width:83px;
   word-wrap:break-word;
 }
-#u537_img {
+#u556_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -157,7 +157,7 @@
   width:87px;
   height:34px;
 }
-#u537 {
+#u556 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -165,7 +165,7 @@
   width:87px;
   height:34px;
 }
-#u538 {
+#u557 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -173,7 +173,7 @@
   width:83px;
   word-wrap:break-word;
 }
-#u539_img {
+#u558_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -181,7 +181,7 @@
   width:87px;
   height:36px;
 }
-#u539 {
+#u558 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -189,7 +189,7 @@
   width:87px;
   height:36px;
 }
-#u540 {
+#u559 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -197,7 +197,7 @@
   width:83px;
   word-wrap:break-word;
 }
-#u541_img {
+#u560_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -205,7 +205,7 @@
   width:87px;
   height:30px;
 }
-#u541 {
+#u560 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -213,7 +213,7 @@
   width:87px;
   height:30px;
 }
-#u542 {
+#u561 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -221,7 +221,7 @@
   width:83px;
   word-wrap:break-word;
 }
-#u543_img {
+#u562_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -229,7 +229,7 @@
   width:87px;
   height:32px;
 }
-#u543 {
+#u562 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -237,7 +237,7 @@
   width:87px;
   height:32px;
 }
-#u544 {
+#u563 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -245,7 +245,7 @@
   width:83px;
   word-wrap:break-word;
 }
-#u545_img {
+#u564_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -253,7 +253,7 @@
   width:87px;
   height:32px;
 }
-#u545 {
+#u564 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -261,7 +261,7 @@
   width:87px;
   height:32px;
 }
-#u546 {
+#u565 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -269,7 +269,7 @@
   width:83px;
   word-wrap:break-word;
 }
-#u547_img {
+#u566_img {
   border-width:0px;
   position:absolute;
   left:-4px;
@@ -277,7 +277,7 @@
   width:40px;
   height:50px;
 }
-#u547 {
+#u566 {
   border-width:0px;
   position:absolute;
   left:104px;
@@ -285,7 +285,7 @@
   width:30px;
   height:40px;
 }
-#u548 {
+#u567 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -294,7 +294,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u549_div {
+#u568_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -309,7 +309,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u549 {
+#u568 {
   border-width:0px;
   position:absolute;
   left:154px;
@@ -317,7 +317,7 @@
   width:648px;
   height:329px;
 }
-#u550 {
+#u569 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -326,7 +326,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u551_img {
+#u570_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -334,7 +334,7 @@
   width:648px;
   height:335px;
 }
-#u551 {
+#u570 {
   border-width:0px;
   position:absolute;
   left:154px;
@@ -342,7 +342,7 @@
   width:648px;
   height:335px;
 }
-#u552 {
+#u571 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -351,7 +351,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u553 {
+#u572 {
   border-width:0px;
   position:absolute;
   left:347px;
@@ -359,7 +359,7 @@
   width:254px;
   height:66px;
 }
-#u554_img {
+#u573_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -367,7 +367,7 @@
   width:101px;
   height:32px;
 }
-#u554 {
+#u573 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -375,7 +375,7 @@
   width:101px;
   height:32px;
 }
-#u555 {
+#u574 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -383,7 +383,7 @@
   width:97px;
   word-wrap:break-word;
 }
-#u556_img {
+#u575_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -391,7 +391,7 @@
   width:148px;
   height:32px;
 }
-#u556 {
+#u575 {
   border-width:0px;
   position:absolute;
   left:101px;
@@ -399,7 +399,7 @@
   width:148px;
   height:32px;
 }
-#u557 {
+#u576 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -407,7 +407,7 @@
   width:144px;
   word-wrap:break-word;
 }
-#u558_img {
+#u577_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -415,7 +415,7 @@
   width:101px;
   height:29px;
 }
-#u558 {
+#u577 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -423,7 +423,7 @@
   width:101px;
   height:29px;
 }
-#u559 {
+#u578 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -431,7 +431,7 @@
   width:97px;
   word-wrap:break-word;
 }
-#u560_img {
+#u579_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -439,7 +439,7 @@
   width:148px;
   height:29px;
 }
-#u560 {
+#u579 {
   border-width:0px;
   position:absolute;
   left:101px;
@@ -447,7 +447,7 @@
   width:148px;
   height:29px;
 }
-#u561 {
+#u580 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -455,7 +455,7 @@
   width:144px;
   word-wrap:break-word;
 }
-#u562_div {
+#u581_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -474,7 +474,7 @@
   box-shadow:none;
   font-size:18px;
 }
-#u562 {
+#u581 {
   border-width:0px;
   position:absolute;
   left:390px;
@@ -483,7 +483,7 @@
   height:36px;
   font-size:18px;
 }
-#u563 {
+#u582 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -491,7 +491,7 @@
   width:148px;
   word-wrap:break-word;
 }
-#u564 {
+#u583 {
   border-width:0px;
   position:absolute;
   left:447px;
@@ -499,7 +499,7 @@
   width:149px;
   height:34px;
 }
-#u564_input {
+#u583_input {
   position:absolute;
   left:0px;
   top:0px;
@@ -513,7 +513,7 @@
   color:#000000;
   text-align:left;
 }
-#u565_div {
+#u584_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -533,7 +533,7 @@
   font-size:16px;
   color:#000000;
 }
-#u565 {
+#u584 {
   border-width:0px;
   position:absolute;
   left:366px;
@@ -546,7 +546,7 @@
   font-size:16px;
   color:#000000;
 }
-#u566 {
+#u585 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -554,7 +554,7 @@
   width:71px;
   white-space:nowrap;
 }
-#u567_div {
+#u586_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -574,7 +574,7 @@
   font-size:16px;
   color:#000000;
 }
-#u567 {
+#u586 {
   border-width:0px;
   position:absolute;
   left:366px;
@@ -587,7 +587,7 @@
   font-size:16px;
   color:#000000;
 }
-#u568 {
+#u587 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -595,7 +595,7 @@
   width:71px;
   white-space:nowrap;
 }
-#u569 {
+#u588 {
   border-width:0px;
   position:absolute;
   left:447px;
@@ -603,7 +603,7 @@
   width:149px;
   height:34px;
 }
-#u569_input {
+#u588_input {
   position:absolute;
   left:0px;
   top:0px;
@@ -617,7 +617,7 @@
   color:#000000;
   text-align:left;
 }
-#u570_div {
+#u589_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -637,7 +637,7 @@
   font-size:16px;
   color:#000000;
 }
-#u570 {
+#u589 {
   border-width:0px;
   position:absolute;
   left:347px;
@@ -650,7 +650,7 @@
   font-size:16px;
   color:#000000;
 }
-#u571 {
+#u590 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -658,7 +658,7 @@
   width:86px;
   word-wrap:break-word;
 }
-#u572_div {
+#u591_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -678,7 +678,7 @@
   font-size:16px;
   color:#000000;
 }
-#u572 {
+#u591 {
   border-width:0px;
   position:absolute;
   left:468px;
@@ -691,7 +691,7 @@
   font-size:16px;
   color:#000000;
 }
-#u573 {
+#u592 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -699,7 +699,7 @@
   width:86px;
   word-wrap:break-word;
 }
-#u574_div {
+#u593_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -716,7 +716,7 @@
   font-size:28px;
   color:#00CC00;
 }
-#u574 {
+#u593 {
   border-width:0px;
   position:absolute;
   left:526px;
@@ -726,7 +726,7 @@
   font-size:28px;
   color:#00CC00;
 }
-#u575 {
+#u594 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -734,7 +734,7 @@
   width:242px;
   word-wrap:break-word;
 }
-#u576_div {
+#u595_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -751,7 +751,7 @@
   font-size:16px;
   color:#00CC00;
 }
-#u576 {
+#u595 {
   border-width:0px;
   position:absolute;
   left:668px;
@@ -761,7 +761,7 @@
   font-size:16px;
   color:#00CC00;
 }
-#u577 {
+#u596 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -769,7 +769,7 @@
   width:118px;
   word-wrap:break-word;
 }
-#u578_img {
+#u597_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -777,7 +777,7 @@
   width:63px;
   height:2px;
 }
-#u578 {
+#u597 {
   border-width:0px;
   position:absolute;
   left:606px;
@@ -785,7 +785,7 @@
   width:62px;
   height:1px;
 }
-#u579 {
+#u598 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -794,7 +794,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u580 {
+#u599 {
   border-width:0px;
   position:absolute;
   left:734px;
@@ -802,7 +802,7 @@
   width:100px;
   height:30px;
 }
-#u580_menu {
+#u599_menu {
   border-width:0px;
   position:absolute;
   left:-3px;
@@ -814,7 +814,7 @@
   -ms-transform:rotate(NaNdeg);
   transform:rotate(NaNdeg);
 }
-#u581 {
+#u600 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -822,7 +822,7 @@
   width:105px;
   height:35px;
 }
-#u582_img {
+#u601_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -830,7 +830,7 @@
   width:100px;
   height:30px;
 }
-#u582 {
+#u601 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -838,7 +838,7 @@
   width:100px;
   height:30px;
 }
-#u583 {
+#u602 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -846,7 +846,7 @@
   width:96px;
   word-wrap:break-word;
 }
-#u584 {
+#u603 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -855,7 +855,7 @@
   height:60px;
   visibility:hidden;
 }
-#u584_menu {
+#u603_menu {
   border-width:0px;
   position:absolute;
   left:-3px;
@@ -867,7 +867,7 @@
   -ms-transform:rotate(NaNdeg);
   transform:rotate(NaNdeg);
 }
-#u585 {
+#u604 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -875,7 +875,7 @@
   width:105px;
   height:65px;
 }
-#u586_img {
+#u605_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -883,7 +883,7 @@
   width:100px;
   height:30px;
 }
-#u586 {
+#u605 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -891,7 +891,7 @@
   width:100px;
   height:30px;
 }
-#u587 {
+#u606 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -899,7 +899,7 @@
   width:96px;
   word-wrap:break-word;
 }
-#u588_img {
+#u607_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -907,7 +907,7 @@
   width:100px;
   height:30px;
 }
-#u588 {
+#u607 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -915,7 +915,7 @@
   width:100px;
   height:30px;
 }
-#u589 {
+#u608 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -923,7 +923,7 @@
   width:96px;
   word-wrap:break-word;
 }
-#u590_img {
+#u609_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -931,7 +931,7 @@
   width:207px;
   height:2px;
 }
-#u590 {
+#u609 {
   border-width:0px;
   position:absolute;
   left:320px;
@@ -939,7 +939,7 @@
   width:206px;
   height:1px;
 }
-#u591 {
+#u610 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -948,7 +948,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u592_img {
+#u611_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -956,7 +956,7 @@
   width:276px;
   height:2px;
 }
-#u592 {
+#u611 {
   border-width:0px;
   position:absolute;
   left:591px;
@@ -964,7 +964,7 @@
   width:275px;
   height:1px;
 }
-#u593 {
+#u612 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -973,7 +973,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u594_div {
+#u613_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -989,7 +989,7 @@
   box-shadow:none;
   font-size:20px;
 }
-#u594 {
+#u613 {
   border-width:0px;
   position:absolute;
   left:834px;
@@ -998,11 +998,104 @@
   height:37px;
   font-size:20px;
 }
-#u595 {
+#u614 {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
   width:312px;
+  word-wrap:break-word;
+}
+#u616_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:70px;
+  height:28px;
+  background:inherit;
+  background-color:rgba(25, 158, 216, 1);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  color:#000000;
+}
+#u616 {
+  border-width:0px;
+  position:absolute;
+  left:35px;
+  top:451px;
+  width:70px;
+  height:28px;
+  color:#000000;
+}
+#u617 {
+  border-width:0px;
+  position:absolute;
+  left:2px;
+  top:6px;
+  width:66px;
+  word-wrap:break-word;
+}
+#u618_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:156px;
+  height:31px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-size:18px;
+  color:#00CC00;
+}
+#u618 {
+  border-width:0px;
+  position:absolute;
+  left:94px;
+  top:489px;
+  width:156px;
+  height:31px;
+  font-size:18px;
+  color:#00CC00;
+}
+#u619 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:156px;
+  word-wrap:break-word;
+}
+#u620_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:88px;
+  height:2px;
+}
+#u620 {
+  border-width:0px;
+  position:absolute;
+  left:27px;
+  top:509px;
+  width:87px;
+  height:1px;
+}
+#u621 {
+  border-width:0px;
+  position:absolute;
+  left:2px;
+  top:-8px;
+  width:83px;
+  visibility:hidden;
   word-wrap:break-word;
 }
