--- a/test6/ui/files/个人信息/styles.css
+++ b/test6/ui/files/个人信息/styles.css
@@ -12,7 +12,7 @@
   position:absolute;
   z-index:0;
 }
-#u455_div {
+#u468_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -30,7 +30,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u455 {
+#u468 {
   border-width:0px;
   position:absolute;
   left:35px;
@@ -38,7 +38,7 @@
   width:799px;
   height:434px;
 }
-#u456 {
+#u469 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -47,7 +47,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u457_img {
+#u470_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -55,7 +55,7 @@
   width:799px;
   height:58px;
 }
-#u457 {
+#u470 {
   border-width:0px;
   position:absolute;
   left:35px;
@@ -68,7 +68,7 @@
   font-size:28px;
   color:#FFFFFF;
 }
-#u458 {
+#u471 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -76,7 +76,7 @@
   width:795px;
   word-wrap:break-word;
 }
-#u459 {
+#u472 {
   border-width:0px;
   position:absolute;
   left:122px;
@@ -84,7 +84,7 @@
   width:708px;
   height:372px;
 }
-#u459_input {
+#u472_input {
   border-width:2px;
   position:absolute;
   left:0px;
@@ -93,7 +93,7 @@
   height:372px;
   overflow:auto;
 }
-#u460 {
+#u473 {
   border-width:0px;
   position:absolute;
   left:35px;
@@ -101,7 +101,7 @@
   width:87px;
   height:192px;
 }
-#u460_menu {
+#u473_menu {
   border-width:0px;
   position:absolute;
   left:-3px;
@@ -113,7 +113,7 @@
   -ms-transform:rotate(NaNdeg);
   transform:rotate(NaNdeg);
 }
-#u461 {
+#u474 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -121,7 +121,7 @@
   width:92px;
   height:197px;
 }
-#u462_img {
+#u475_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -129,7 +129,7 @@
   width:87px;
   height:28px;
 }
-#u462 {
+#u475 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -141,7 +141,7 @@
   font-style:normal;
   color:#000000;
 }
-#u463 {
+#u476 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -149,7 +149,7 @@
   width:83px;
   word-wrap:break-word;
 }
-#u464_img {
+#u477_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -157,7 +157,7 @@
   width:87px;
   height:34px;
 }
-#u464 {
+#u477 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -165,7 +165,7 @@
   width:87px;
   height:34px;
 }
-#u465 {
+#u478 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -173,7 +173,7 @@
   width:83px;
   word-wrap:break-word;
 }
-#u466_img {
+#u479_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -181,7 +181,7 @@
   width:87px;
   height:36px;
 }
-#u466 {
+#u479 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -189,7 +189,7 @@
   width:87px;
   height:36px;
 }
-#u467 {
+#u480 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -197,7 +197,7 @@
   width:83px;
   word-wrap:break-word;
 }
-#u468_img {
+#u481_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -205,7 +205,7 @@
   width:87px;
   height:30px;
 }
-#u468 {
+#u481 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -213,7 +213,7 @@
   width:87px;
   height:30px;
 }
-#u469 {
+#u482 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -221,7 +221,7 @@
   width:83px;
   word-wrap:break-word;
 }
-#u470_img {
+#u483_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -229,7 +229,7 @@
   width:87px;
   height:32px;
 }
-#u470 {
+#u483 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -237,7 +237,7 @@
   width:87px;
   height:32px;
 }
-#u471 {
+#u484 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -245,7 +245,7 @@
   width:83px;
   word-wrap:break-word;
 }
-#u472_img {
+#u485_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -253,7 +253,7 @@
   width:87px;
   height:32px;
 }
-#u472 {
+#u485 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -261,7 +261,7 @@
   width:87px;
   height:32px;
 }
-#u473 {
+#u486 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -269,7 +269,7 @@
   width:83px;
   word-wrap:break-word;
 }
-#u474_img {
+#u487_img {
   border-width:0px;
   position:absolute;
   left:-4px;
@@ -277,7 +277,7 @@
   width:40px;
   height:50px;
 }
-#u474 {
+#u487 {
   border-width:0px;
   position:absolute;
   left:104px;
@@ -285,7 +285,7 @@
   width:30px;
   height:40px;
 }
-#u475 {
+#u488 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -294,7 +294,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u476_div {
+#u489_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -309,7 +309,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u476 {
+#u489 {
   border-width:0px;
   position:absolute;
   left:154px;
@@ -317,7 +317,7 @@
   width:648px;
   height:329px;
 }
-#u477 {
+#u490 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -326,7 +326,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u478 {
+#u491 {
   border-width:0px;
   position:absolute;
   left:314px;
@@ -334,175 +334,31 @@
   width:270px;
   height:212px;
 }
-#u479_img {
+#u492_img {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
-  width:133px;
-  height:43px;
-}
-#u479 {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:133px;
-  height:43px;
-}
-#u480 {
-  border-width:0px;
-  position:absolute;
-  left:2px;
-  top:14px;
-  width:129px;
-  word-wrap:break-word;
-}
-#u481_img {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:132px;
-  height:43px;
-}
-#u481 {
-  border-width:0px;
-  position:absolute;
-  left:133px;
-  top:0px;
-  width:132px;
-  height:43px;
-}
-#u482 {
-  border-width:0px;
-  position:absolute;
-  left:2px;
-  top:14px;
-  width:128px;
-  word-wrap:break-word;
-}
-#u483_img {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:133px;
-  height:43px;
-}
-#u483 {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:43px;
-  width:133px;
-  height:43px;
-}
-#u484 {
-  border-width:0px;
-  position:absolute;
-  left:2px;
-  top:14px;
-  width:129px;
-  word-wrap:break-word;
-}
-#u485_img {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:132px;
-  height:43px;
-}
-#u485 {
-  border-width:0px;
-  position:absolute;
-  left:133px;
-  top:43px;
-  width:132px;
-  height:43px;
-}
-#u486 {
-  border-width:0px;
-  position:absolute;
-  left:2px;
-  top:14px;
-  width:128px;
-  word-wrap:break-word;
-}
-#u487_img {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:133px;
-  height:43px;
-}
-#u487 {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:86px;
-  width:133px;
-  height:43px;
-}
-#u488 {
-  border-width:0px;
-  position:absolute;
-  left:2px;
-  top:14px;
-  width:129px;
-  word-wrap:break-word;
-}
-#u489_img {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:132px;
-  height:43px;
-}
-#u489 {
-  border-width:0px;
-  position:absolute;
-  left:133px;
-  top:86px;
-  width:132px;
-  height:43px;
-}
-#u490 {
-  border-width:0px;
-  position:absolute;
-  left:2px;
-  top:14px;
-  width:128px;
-  word-wrap:break-word;
-}
-#u491_img {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:133px;
-  height:43px;
-}
-#u491 {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:129px;
   width:133px;
   height:43px;
 }
 #u492 {
   border-width:0px;
   position:absolute;
+  left:0px;
+  top:0px;
+  width:133px;
+  height:43px;
+}
+#u493 {
+  border-width:0px;
+  position:absolute;
   left:2px;
   top:14px;
   width:129px;
   word-wrap:break-word;
 }
-#u493_img {
+#u494_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -510,7 +366,151 @@
   width:132px;
   height:43px;
 }
-#u493 {
+#u494 {
+  border-width:0px;
+  position:absolute;
+  left:133px;
+  top:0px;
+  width:132px;
+  height:43px;
+}
+#u495 {
+  border-width:0px;
+  position:absolute;
+  left:2px;
+  top:14px;
+  width:128px;
+  word-wrap:break-word;
+}
+#u496_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:133px;
+  height:43px;
+}
+#u496 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:43px;
+  width:133px;
+  height:43px;
+}
+#u497 {
+  border-width:0px;
+  position:absolute;
+  left:2px;
+  top:14px;
+  width:129px;
+  word-wrap:break-word;
+}
+#u498_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:132px;
+  height:43px;
+}
+#u498 {
+  border-width:0px;
+  position:absolute;
+  left:133px;
+  top:43px;
+  width:132px;
+  height:43px;
+}
+#u499 {
+  border-width:0px;
+  position:absolute;
+  left:2px;
+  top:14px;
+  width:128px;
+  word-wrap:break-word;
+}
+#u500_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:133px;
+  height:43px;
+}
+#u500 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:86px;
+  width:133px;
+  height:43px;
+}
+#u501 {
+  border-width:0px;
+  position:absolute;
+  left:2px;
+  top:14px;
+  width:129px;
+  word-wrap:break-word;
+}
+#u502_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:132px;
+  height:43px;
+}
+#u502 {
+  border-width:0px;
+  position:absolute;
+  left:133px;
+  top:86px;
+  width:132px;
+  height:43px;
+}
+#u503 {
+  border-width:0px;
+  position:absolute;
+  left:2px;
+  top:14px;
+  width:128px;
+  word-wrap:break-word;
+}
+#u504_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:133px;
+  height:43px;
+}
+#u504 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:129px;
+  width:133px;
+  height:43px;
+}
+#u505 {
+  border-width:0px;
+  position:absolute;
+  left:2px;
+  top:14px;
+  width:129px;
+  word-wrap:break-word;
+}
+#u506_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:132px;
+  height:43px;
+}
+#u506 {
   border-width:0px;
   position:absolute;
   left:133px;
@@ -518,7 +518,7 @@
   width:132px;
   height:43px;
 }
-#u494 {
+#u507 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -526,7 +526,7 @@
   width:128px;
   word-wrap:break-word;
 }
-#u495_img {
+#u508_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -534,7 +534,7 @@
   width:133px;
   height:35px;
 }
-#u495 {
+#u508 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -542,7 +542,7 @@
   width:133px;
   height:35px;
 }
-#u496 {
+#u509 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -550,7 +550,7 @@
   width:129px;
   word-wrap:break-word;
 }
-#u497_img {
+#u510_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -558,7 +558,7 @@
   width:132px;
   height:35px;
 }
-#u497 {
+#u510 {
   border-width:0px;
   position:absolute;
   left:133px;
@@ -566,7 +566,7 @@
   width:132px;
   height:35px;
 }
-#u498 {
+#u511 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -574,7 +574,7 @@
   width:128px;
   word-wrap:break-word;
 }
-#u499_div {
+#u512_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -593,7 +593,7 @@
   box-shadow:none;
   font-size:18px;
 }
-#u499 {
+#u512 {
   border-width:0px;
   position:absolute;
   left:359px;
@@ -602,7 +602,7 @@
   height:36px;
   font-size:18px;
 }
-#u500 {
+#u513 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -610,7 +610,7 @@
   width:148px;
   word-wrap:break-word;
 }
-#u501_div {
+#u514_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -630,7 +630,7 @@
   font-size:16px;
   color:#000000;
 }
-#u501 {
+#u514 {
   border-width:0px;
   position:absolute;
   left:328px;
@@ -643,7 +643,7 @@
   font-size:16px;
   color:#000000;
 }
-#u502 {
+#u515 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -651,7 +651,7 @@
   width:86px;
   word-wrap:break-word;
 }
-#u503_div {
+#u516_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -671,7 +671,7 @@
   font-size:16px;
   color:#000000;
 }
-#u503 {
+#u516 {
   border-width:0px;
   position:absolute;
   left:470px;
@@ -684,7 +684,7 @@
   font-size:16px;
   color:#000000;
 }
-#u504 {
+#u517 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -692,7 +692,7 @@
   width:86px;
   word-wrap:break-word;
 }
-#u505_div {
+#u518_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -709,7 +709,7 @@
   font-size:28px;
   color:#00CC00;
 }
-#u505 {
+#u518 {
   border-width:0px;
   position:absolute;
   left:526px;
@@ -719,7 +719,7 @@
   font-size:28px;
   color:#00CC00;
 }
-#u506 {
+#u519 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -727,7 +727,7 @@
   width:242px;
   word-wrap:break-word;
 }
-#u507_div {
+#u520_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -744,7 +744,7 @@
   font-size:16px;
   color:#00CC00;
 }
-#u507 {
+#u520 {
   border-width:0px;
   position:absolute;
   left:661px;
@@ -754,7 +754,7 @@
   font-size:16px;
   color:#00CC00;
 }
-#u508 {
+#u521 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -762,7 +762,7 @@
   width:118px;
   word-wrap:break-word;
 }
-#u509_img {
+#u522_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -770,7 +770,7 @@
   width:63px;
   height:2px;
 }
-#u509 {
+#u522 {
   border-width:0px;
   position:absolute;
   left:589px;
@@ -778,7 +778,7 @@
   width:62px;
   height:1px;
 }
-#u510 {
+#u523 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -787,7 +787,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u511_img {
+#u524_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -795,7 +795,7 @@
   width:207px;
   height:2px;
 }
-#u511 {
+#u524 {
   border-width:0px;
   position:absolute;
   left:320px;
@@ -803,7 +803,7 @@
   width:206px;
   height:1px;
 }
-#u512 {
+#u525 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -812,7 +812,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u513 {
+#u526 {
   border-width:0px;
   position:absolute;
   left:734px;
@@ -820,7 +820,7 @@
   width:100px;
   height:30px;
 }
-#u513_menu {
+#u526_menu {
   border-width:0px;
   position:absolute;
   left:-3px;
@@ -832,7 +832,7 @@
   -ms-transform:rotate(NaNdeg);
   transform:rotate(NaNdeg);
 }
-#u514 {
+#u527 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -840,7 +840,7 @@
   width:105px;
   height:35px;
 }
-#u515_img {
+#u528_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -848,7 +848,7 @@
   width:100px;
   height:30px;
 }
-#u515 {
+#u528 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -856,7 +856,7 @@
   width:100px;
   height:30px;
 }
-#u516 {
+#u529 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -864,7 +864,7 @@
   width:96px;
   word-wrap:break-word;
 }
-#u517 {
+#u530 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -873,7 +873,7 @@
   height:60px;
   visibility:hidden;
 }
-#u517_menu {
+#u530_menu {
   border-width:0px;
   position:absolute;
   left:-3px;
@@ -885,7 +885,7 @@
   -ms-transform:rotate(NaNdeg);
   transform:rotate(NaNdeg);
 }
-#u518 {
+#u531 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -893,7 +893,7 @@
   width:105px;
   height:65px;
 }
-#u519_img {
+#u532_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -901,7 +901,7 @@
   width:100px;
   height:30px;
 }
-#u519 {
+#u532 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -909,7 +909,7 @@
   width:100px;
   height:30px;
 }
-#u520 {
+#u533 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -917,7 +917,7 @@
   width:96px;
   word-wrap:break-word;
 }
-#u521_img {
+#u534_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -925,7 +925,7 @@
   width:100px;
   height:30px;
 }
-#u521 {
+#u534 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -933,7 +933,7 @@
   width:100px;
   height:30px;
 }
-#u522 {
+#u535 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -941,7 +941,7 @@
   width:96px;
   word-wrap:break-word;
 }
-#u523_img {
+#u536_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -949,7 +949,7 @@
   width:276px;
   height:2px;
 }
-#u523 {
+#u536 {
   border-width:0px;
   position:absolute;
   left:591px;
@@ -957,7 +957,7 @@
   width:275px;
   height:1px;
 }
-#u524 {
+#u537 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -966,7 +966,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u525_div {
+#u538_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -982,7 +982,7 @@
   box-shadow:none;
   font-size:20px;
 }
-#u525 {
+#u538 {
   border-width:0px;
   position:absolute;
   left:834px;
@@ -991,11 +991,104 @@
   height:37px;
   font-size:20px;
 }
-#u526 {
+#u539 {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
   width:312px;
+  word-wrap:break-word;
+}
+#u541_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:70px;
+  height:28px;
+  background:inherit;
+  background-color:rgba(25, 158, 216, 1);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  color:#000000;
+}
+#u541 {
+  border-width:0px;
+  position:absolute;
+  left:35px;
+  top:451px;
+  width:70px;
+  height:28px;
+  color:#000000;
+}
+#u542 {
+  border-width:0px;
+  position:absolute;
+  left:2px;
+  top:6px;
+  width:66px;
+  word-wrap:break-word;
+}
+#u543_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:156px;
+  height:31px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-size:18px;
+  color:#00CC00;
+}
+#u543 {
+  border-width:0px;
+  position:absolute;
+  left:94px;
+  top:489px;
+  width:156px;
+  height:31px;
+  font-size:18px;
+  color:#00CC00;
+}
+#u544 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:156px;
+  word-wrap:break-word;
+}
+#u545_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:88px;
+  height:2px;
+}
+#u545 {
+  border-width:0px;
+  position:absolute;
+  left:27px;
+  top:509px;
+  width:87px;
+  height:1px;
+}
+#u546 {
+  border-width:0px;
+  position:absolute;
+  left:2px;
+  top:-8px;
+  width:83px;
+  visibility:hidden;
   word-wrap:break-word;
 }
