--- a/test6/ui/files/安全退出/styles.css
+++ b/test6/ui/files/安全退出/styles.css
@@ -12,7 +12,7 @@
   position:absolute;
   z-index:0;
 }
-#u597_div {
+#u622_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -30,7 +30,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u597 {
+#u622 {
   border-width:0px;
   position:absolute;
   left:35px;
@@ -38,7 +38,7 @@
   width:799px;
   height:434px;
 }
-#u598 {
+#u623 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -47,7 +47,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u599_img {
+#u624_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -55,7 +55,7 @@
   width:799px;
   height:58px;
 }
-#u599 {
+#u624 {
   border-width:0px;
   position:absolute;
   left:35px;
@@ -68,7 +68,7 @@
   font-size:28px;
   color:#FFFFFF;
 }
-#u600 {
+#u625 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -76,7 +76,7 @@
   width:795px;
   word-wrap:break-word;
 }
-#u601 {
+#u626 {
   border-width:0px;
   position:absolute;
   left:122px;
@@ -84,7 +84,7 @@
   width:708px;
   height:372px;
 }
-#u601_input {
+#u626_input {
   border-width:2px;
   position:absolute;
   left:0px;
@@ -93,7 +93,7 @@
   height:372px;
   overflow:auto;
 }
-#u602 {
+#u627 {
   border-width:0px;
   position:absolute;
   left:35px;
@@ -101,7 +101,7 @@
   width:87px;
   height:192px;
 }
-#u602_menu {
+#u627_menu {
   border-width:0px;
   position:absolute;
   left:-3px;
@@ -113,7 +113,7 @@
   -ms-transform:rotate(NaNdeg);
   transform:rotate(NaNdeg);
 }
-#u603 {
+#u628 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -121,7 +121,7 @@
   width:92px;
   height:197px;
 }
-#u604_img {
+#u629_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -129,7 +129,7 @@
   width:87px;
   height:28px;
 }
-#u604 {
+#u629 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -141,7 +141,7 @@
   font-style:normal;
   color:#000000;
 }
-#u605 {
+#u630 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -149,7 +149,7 @@
   width:83px;
   word-wrap:break-word;
 }
-#u606_img {
+#u631_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -157,7 +157,7 @@
   width:87px;
   height:34px;
 }
-#u606 {
+#u631 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -165,7 +165,7 @@
   width:87px;
   height:34px;
 }
-#u607 {
+#u632 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -173,7 +173,7 @@
   width:83px;
   word-wrap:break-word;
 }
-#u608_img {
+#u633_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -181,7 +181,7 @@
   width:87px;
   height:36px;
 }
-#u608 {
+#u633 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -189,7 +189,7 @@
   width:87px;
   height:36px;
 }
-#u609 {
+#u634 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -197,7 +197,7 @@
   width:83px;
   word-wrap:break-word;
 }
-#u610_img {
+#u635_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -205,7 +205,7 @@
   width:87px;
   height:30px;
 }
-#u610 {
+#u635 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -213,7 +213,7 @@
   width:87px;
   height:30px;
 }
-#u611 {
+#u636 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -221,7 +221,7 @@
   width:83px;
   word-wrap:break-word;
 }
-#u612_img {
+#u637_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -229,7 +229,7 @@
   width:87px;
   height:32px;
 }
-#u612 {
+#u637 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -237,7 +237,7 @@
   width:87px;
   height:32px;
 }
-#u613 {
+#u638 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -245,7 +245,7 @@
   width:83px;
   word-wrap:break-word;
 }
-#u614_img {
+#u639_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -253,7 +253,7 @@
   width:87px;
   height:32px;
 }
-#u614 {
+#u639 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -261,7 +261,7 @@
   width:87px;
   height:32px;
 }
-#u615 {
+#u640 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -269,7 +269,7 @@
   width:83px;
   word-wrap:break-word;
 }
-#u616_img {
+#u641_img {
   border-width:0px;
   position:absolute;
   left:-4px;
@@ -277,7 +277,7 @@
   width:40px;
   height:50px;
 }
-#u616 {
+#u641 {
   border-width:0px;
   position:absolute;
   left:104px;
@@ -285,7 +285,7 @@
   width:30px;
   height:40px;
 }
-#u617 {
+#u642 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -294,7 +294,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u618_div {
+#u643_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -309,7 +309,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u618 {
+#u643 {
   border-width:0px;
   position:absolute;
   left:154px;
@@ -317,7 +317,7 @@
   width:648px;
   height:329px;
 }
-#u619 {
+#u644 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -326,7 +326,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u620_img {
+#u645_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -334,7 +334,7 @@
   width:394px;
   height:329px;
 }
-#u620 {
+#u645 {
   border-width:0px;
   position:absolute;
   left:273px;
@@ -342,7 +342,7 @@
   width:394px;
   height:329px;
 }
-#u621 {
+#u646 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -351,7 +351,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u622_div {
+#u647_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -370,7 +370,7 @@
   box-shadow:none;
   font-size:18px;
 }
-#u622 {
+#u647 {
   border-width:0px;
   position:absolute;
   left:396px;
@@ -379,7 +379,7 @@
   height:36px;
   font-size:18px;
 }
-#u623 {
+#u648 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -387,7 +387,7 @@
   width:148px;
   word-wrap:break-word;
 }
-#u624_div {
+#u649_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -407,7 +407,7 @@
   font-size:16px;
   color:#000000;
 }
-#u624 {
+#u649 {
   border-width:0px;
   position:absolute;
   left:367px;
@@ -420,7 +420,7 @@
   font-size:16px;
   color:#000000;
 }
-#u625 {
+#u650 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -428,7 +428,7 @@
   width:86px;
   word-wrap:break-word;
 }
-#u626_div {
+#u651_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -448,7 +448,7 @@
   font-size:16px;
   color:#000000;
 }
-#u626 {
+#u651 {
   border-width:0px;
   position:absolute;
   left:482px;
@@ -461,7 +461,7 @@
   font-size:16px;
   color:#000000;
 }
-#u627 {
+#u652 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -469,7 +469,7 @@
   width:86px;
   word-wrap:break-word;
 }
-#u628_div {
+#u653_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -485,7 +485,7 @@
   box-shadow:none;
   font-size:18px;
 }
-#u628 {
+#u653 {
   border-width:0px;
   position:absolute;
   left:420px;
@@ -494,7 +494,7 @@
   height:27px;
   font-size:18px;
 }
-#u629 {
+#u654 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -502,7 +502,7 @@
   width:143px;
   word-wrap:break-word;
 }
-#u630_div {
+#u655_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -519,7 +519,7 @@
   font-size:28px;
   color:#00CC00;
 }
-#u630 {
+#u655 {
   border-width:0px;
   position:absolute;
   left:526px;
@@ -529,7 +529,7 @@
   font-size:28px;
   color:#00CC00;
 }
-#u631 {
+#u656 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -537,136 +537,7 @@
   width:242px;
   word-wrap:break-word;
 }
-#u632 {
-  border-width:0px;
-  position:absolute;
-  left:734px;
-  top:32px;
-  width:100px;
-  height:26px;
-}
-#u632_menu {
-  border-width:0px;
-  position:absolute;
-  left:-3px;
-  top:-3px;
-  width:106px;
-  height:32px;
-  -webkit-transform:rotate(NaNdeg);
-  -moz-transform:rotate(NaNdeg);
-  -ms-transform:rotate(NaNdeg);
-  transform:rotate(NaNdeg);
-}
-#u633 {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:105px;
-  height:31px;
-}
-#u634_img {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:100px;
-  height:26px;
-}
-#u634 {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:100px;
-  height:26px;
-}
-#u635 {
-  border-width:0px;
-  position:absolute;
-  left:2px;
-  top:6px;
-  width:96px;
-  word-wrap:break-word;
-}
-#u636 {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:26px;
-  width:100px;
-  height:60px;
-  visibility:hidden;
-}
-#u636_menu {
-  border-width:0px;
-  position:absolute;
-  left:-3px;
-  top:-3px;
-  width:106px;
-  height:66px;
-  -webkit-transform:rotate(NaNdeg);
-  -moz-transform:rotate(NaNdeg);
-  -ms-transform:rotate(NaNdeg);
-  transform:rotate(NaNdeg);
-}
-#u637 {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:105px;
-  height:65px;
-}
-#u638_img {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:100px;
-  height:30px;
-}
-#u638 {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:100px;
-  height:30px;
-}
-#u639 {
-  border-width:0px;
-  position:absolute;
-  left:2px;
-  top:8px;
-  width:96px;
-  word-wrap:break-word;
-}
-#u640_img {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:100px;
-  height:30px;
-}
-#u640 {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:30px;
-  width:100px;
-  height:30px;
-}
-#u641 {
-  border-width:0px;
-  position:absolute;
-  left:2px;
-  top:8px;
-  width:96px;
-  word-wrap:break-word;
-}
-#u642_img {
+#u657_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -674,7 +545,7 @@
   width:207px;
   height:2px;
 }
-#u642 {
+#u657 {
   border-width:0px;
   position:absolute;
   left:310px;
@@ -682,7 +553,7 @@
   width:206px;
   height:1px;
 }
-#u643 {
+#u658 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -691,7 +562,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u644_img {
+#u659_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -699,7 +570,7 @@
   width:129px;
   height:2px;
 }
-#u644 {
+#u659 {
   border-width:0px;
   position:absolute;
   left:834px;
@@ -708,7 +579,7 @@
   height:1px;
   color:#00CC00;
 }
-#u645 {
+#u660 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -717,7 +588,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u646_div {
+#u661_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -733,7 +604,7 @@
   box-shadow:none;
   font-size:18px;
 }
-#u646 {
+#u661 {
   border-width:0px;
   position:absolute;
   left:867px;
@@ -742,11 +613,204 @@
   height:26px;
   font-size:18px;
 }
-#u647 {
+#u662 {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
   width:262px;
+  word-wrap:break-word;
+}
+#u664_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:70px;
+  height:28px;
+  background:inherit;
+  background-color:rgba(25, 158, 216, 1);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  color:#000000;
+}
+#u664 {
+  border-width:0px;
+  position:absolute;
+  left:35px;
+  top:451px;
+  width:70px;
+  height:28px;
+  color:#000000;
+}
+#u665 {
+  border-width:0px;
+  position:absolute;
+  left:2px;
+  top:6px;
+  width:66px;
+  word-wrap:break-word;
+}
+#u666_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:156px;
+  height:31px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-size:18px;
+  color:#00CC00;
+}
+#u666 {
+  border-width:0px;
+  position:absolute;
+  left:94px;
+  top:489px;
+  width:156px;
+  height:31px;
+  font-size:18px;
+  color:#00CC00;
+}
+#u667 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:156px;
+  word-wrap:break-word;
+}
+#u668_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:88px;
+  height:2px;
+}
+#u668 {
+  border-width:0px;
+  position:absolute;
+  left:27px;
+  top:509px;
+  width:87px;
+  height:1px;
+}
+#u669 {
+  border-width:0px;
+  position:absolute;
+  left:2px;
+  top:-8px;
+  width:83px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u670 {
+  border-width:0px;
+  position:absolute;
+  left:734px;
+  top:27px;
+  width:100px;
+  height:90px;
+}
+#u670_menu {
+  border-width:0px;
+  position:absolute;
+  left:-3px;
+  top:-3px;
+  width:106px;
+  height:96px;
+  -webkit-transform:rotate(NaNdeg);
+  -moz-transform:rotate(NaNdeg);
+  -ms-transform:rotate(NaNdeg);
+  transform:rotate(NaNdeg);
+}
+#u671 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:105px;
+  height:95px;
+}
+#u672_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:100px;
+  height:30px;
+}
+#u672 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:100px;
+  height:30px;
+}
+#u673 {
+  border-width:0px;
+  position:absolute;
+  left:2px;
+  top:8px;
+  width:96px;
+  word-wrap:break-word;
+}
+#u674_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:100px;
+  height:30px;
+}
+#u674 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:30px;
+  width:100px;
+  height:30px;
+}
+#u675 {
+  border-width:0px;
+  position:absolute;
+  left:2px;
+  top:8px;
+  width:96px;
+  word-wrap:break-word;
+}
+#u676_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:100px;
+  height:30px;
+}
+#u676 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:60px;
+  width:100px;
+  height:30px;
+}
+#u677 {
+  border-width:0px;
+  position:absolute;
+  left:2px;
+  top:8px;
+  width:96px;
   word-wrap:break-word;
 }
